add respec to Startpagina

--- a/publiek/Startpagina_118882759.html
+++ b/publiek/Startpagina_118882759.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+	 <script src="https://www.w3.org/Tools/respec/respec-w3c" class="remove" defer></script>
+  <script class="remove">
+   var respecConfig = {
+     // configuration options
+   }
+  </script>
     <head>
         <title>Beheer Afsprakenstelsel eToegang : Startpagina</title>
         <link rel="stylesheet" href="styles/site.css" type="text/css" />
